--- a/index.html
+++ b/index.html
@@ -66,51 +66,6 @@
 		</div>
 	</div>
 </header>
-<section id="about" class="s_about bg_light">
-	<div class="section_header">
-		<h2>About me</h2>
-		<div class="s_descr_wrap">
-			<div class="s_descr">Let's get to know each other</div>
-		</div>
-	</div>
-	<div class="section_content">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4 col-md-push-4 animation_1">
-					<h3>Photo</h3>
-					<div class="person">
-						<a href="img/photo.jpg" class="popup"><img src="img/photo.jpg" alt="Alt" /></a>
-					</div>
-				</div>
-				<div class="col-md-4 col-md-pull-4 animation_2">
-					<h3>A little about myself</h3>
-					<p>Family status - married, two children. Personal qualities: responsible, purposeful, capable, sociable, reliable.</p>
-					<p>Hobby: sports (football, boxing, volleyball - at a professional level), travel. Status - a participant in military operations (Anti-terrorist operation in Ukraine). Additional skills: football arbitration, painting. Without bad habbits.</p>
-				</div>
-				<div class="col-md-4 animation_3 personal_last_block">
-					<h3>Personal information</h3>
-					<h2 class="personal_header">MAKSYM ZHYVOTOVSKYI</h2>
-					<ul>
-						<li>Professional website development: HTML layout, responsive Web Design, landing on CMS WordPress, CMS MODX, </li>
-						<li>Birthday: September 13, 1985</li>
-						<li>Phone number: 096 471-24-00</li>
-						<li>E-mail: <a href="mailto:maxjulya@gmail.com">maxjulya@gmail.com</a></li>
-						
-					</ul>
-					<div class="social_wrap">
-						<ul>
-							<li><a href="https://github.com/maxjulya" target="_blank"><i class="fa fa-github"></i></a></li>							
-							<li><a href="https://www.facebook.com/profile.php?id=100005615805334&fref=ts" target="_blank"><i class="fa fa-facebook"></i></a></li>						
-							<li><a href="#" target="_blank"><i class="fa fa-odnoklassniki"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fa fa-vk"></i></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
 
 <section id="resume" class="s_resume">
 	<div class="section_header">
@@ -166,6 +121,54 @@
 							<div class="year">2002-207</div>
 							<div class="resume_description"><strong>SPECIALIST ON TRANSPORT</strong><p>Kyiv University of Economics and Technology of Transport</p></div>
 
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section id="about" class="s_about bg_light">
+	<div class="section_header">
+		<h2>About me</h2>
+		<div class="s_descr_wrap">
+			<div class="s_descr">Let's get to know each other</div>
+		</div>
+	</div>
+	<div class="section_content">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 col-md-push-4 animation_1">
+					<h3>Photo</h3>
+					<div class="person">
+						<a href="img/photo.jpg" class="popup"><img src="img/photo.jpg" alt="Alt" /></a>
+					</div>
+				</div>
+				<div class="col-md-4 col-md-pull-4 animation_2">
+					<h3>A little about myself</h3>
+					<p>Personal qualities: responsible, purposeful, capable, sociable, reliable.</p>
+					<p>Family status - married, two children.</br>
+					Hobby: sports (football, boxing, volleyball - at a professional level), travel.</br> Status - a participant in military operations (Anti-terrorist operation in Ukraine).</br> Additional skills: football arbitration, painting.</br> Without bad habbits.</p>
+					<!-- <p>Hobby: sports (football, boxing, volleyball - at a professional level), travel. Status - a participant in military operations (Anti-terrorist operation in Ukraine). Additional skills: football arbitration, painting. Without bad habbits.</p> -->
+				</div>
+				<div class="col-md-4 animation_3 personal_last_block">
+					<h3>Personal information</h3>
+					<h2 class="personal_header">MAKSYM ZHYVOTOVSKYI</h2>
+					<ul>
+						<li>Professional website development: HTML layout, responsive Web Design, landing on CMS WordPress, CMS MODX, </li>
+						<li>Birthday: September 13, 1985</li>
+						<li>Phone number: 096 471-24-00</li>
+						<li>E-mail: <a href="mailto:maxjulya@gmail.com">maxjulya@gmail.com</a></li>
+						
+					</ul>
+					<div class="social_wrap">
+						<ul>
+							<li><a href="https://github.com/maxjulya" target="_blank"><i class="fa fa-github"></i></a></li>							
+							<li><a href="https://www.facebook.com/profile.php?id=100005615805334&fref=ts" target="_blank"><i class="fa fa-facebook"></i></a></li>						
+							<li><a href="#" target="_blank"><i class="fa fa-odnoklassniki"></i></a></li>
+							<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="#" target="_blank"><i class="fa fa-vk"></i></a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
