--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
               </div>
               <div class="resume_item">
                   <div class="year">2006-2007</div>
-                  <div class="resume_description">The station "Kiev-Petrovka"<strong>Operator of the centralized control station</strong></div>
+                  <div class="resume_description">The station "Kyiv-Petrovka"<strong>Operator of the centralized control station</strong></div>
                   <p></p>
               </div>
 							<div class="resume_item">
 								<div class="year">2005-2006</div>
-								<div class="resume_description">Station "Kiev-Passenger"<strong>Trainset collector</strong></div>
+								<div class="resume_description">Station "Kyiv-Passenger"<strong>Trainset collector</strong></div>
 								<p></p>
 							</div>
 						</div>
@@ -506,7 +506,7 @@
 					<div class="contact_box">
 						<div class="contacts_icon icon-basic-geolocalize-05"></div>
 						<h3>Address:</h3>
-						<p>Kiev, Street Zodchih, 62-b, apartment 195.</p>
+						<p>Kyiv, Street Zodchih, 62-b, apartment 195.</p>
 					</div>
 					<div class="contact_box">
 						<div class="contacts_icon icon-basic-smartphone"></div>
