--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 					<h3>A little about myself</h3>
 					<p>Personal qualities: responsible, purposeful, capable, sociable, reliable.</p>
 					<p>Family status - married, two children.</br>
-					Hobby: sports (football, boxing, volleyball - at a professional level), travel.</br> Status - a participant in military operations (Anti-terrorist operation in Ukraine).</br> Additional skills: football arbitration, painting.</br> Without bad habbits.</p>
+					Hobby: sports (football, boxing, volleyball - at a professional level), travel.</br> Status - a participant in military operations (Anti-terrorist operation in Ukraine).</br> Additional skills: football arbitration, painting.</br> Without bad habits.</p>
 					<!-- <p>Hobby: sports (football, boxing, volleyball - at a professional level), travel. Status - a participant in military operations (Anti-terrorist operation in Ukraine). Additional skills: football arbitration, painting. Without bad habbits.</p> -->
 				</div>
 				<div class="col-md-4 animation_3 personal_last_block">
