--- a/index.html
+++ b/index.html
@@ -196,6 +196,24 @@
 				</div>
 				<div id="portfolio_grid">
 					<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-1">
+						<img src="img/s&mitler.jpg" alt="Alt" />
+						<div class="port_item_cont">
+							<h3>S&Mitler</h3>
+							<p>Responsive Landing page for beauty saloon</p>
+                            <a target="_blank" href="S_MitlerModify2/app/index.html">Look at</a>
+						</div>
+						<div class="hidden">
+							<div class="podrt_descr">
+								<div class="modal-box-content">
+									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+									<h3>Title of work</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
+									<img src="img/avtoservis.jpg" alt="Alt" />
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-1">
 						<img src="img/URLAUBSGLÜCK.jpg" alt="Alt" />
 						<div class="port_item_cont">
 							<h3>URLAUBSGLÜCK</h3>
@@ -248,25 +266,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-1">
-						<img src="img/bobrobook.jpg" alt="Alt" />
-						<div class="port_item_cont">
-							<h3>Bobrobook</h3>
-							<p>Landing page for sale used machinery</p>
-							<a target="_blank"href="https://maxjulya.github.io/Bobrobook/" >Look at</a>
-						</div>
-						<div class="hidden">
-							<div class="podrt_descr">
-								<div class="modal-box-content">
-									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
-									<h3>Title of work</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
-									<img src="img/portfolio-images/3.jpg" alt="Alt" />
-								</div>
-							</div>
-						</div>
-					</div>
+					</div>		
 
 					<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-1">
 						<img src="img/Green.jpg" alt="Alt" />
@@ -282,6 +282,24 @@
 									<h3>Title of work</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/1.jpg" alt="Alt" />
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-1">
+						<img src="img/bobrobook.jpg" alt="Alt" />
+						<div class="port_item_cont">
+							<h3>Bobrobook</h3>
+							<p>Landing page for sale used machinery</p>
+							<a target="_blank"href="https://maxjulya.github.io/Bobrobook/" >Look at</a>
+						</div>
+						<div class="hidden">
+							<div class="podrt_descr">
+								<div class="modal-box-content">
+									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+									<h3>Title of work</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
+									<img src="img/portfolio-images/3.jpg" alt="Alt" />
 								</div>
 							</div>
 						</div>
@@ -413,7 +431,6 @@
 							</div>
 						</div>
 					</div>
-
 					<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
 						<img src="img/blog.jpg" alt="Alt" />
 						<div class="port_item_cont">
@@ -431,25 +448,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-3">
-						<img src="img/jQuery_plugins.jpg" alt="Alt" />
-						<div class="port_item_cont">
-							<h3>Javascript</h3>
-							<p>jQuery plugins</p>
-							<a target="_blank" href="jQueryPlugins/index.html">Look at</a>
-						</div>
-						<div class="hidden">
-							<div class="podrt_descr">
-								<div class="modal-box-content">
-									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
-									<h3>Title of work</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
-									<img src="img/portfolio-images/5.jpg" alt="Alt" />
-								</div>
-							</div>
-						</div>
-					</div>
+					</div>	
 					<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-3">
 						<img src="img/test.jpg" alt="Alt" />
 						<div class="port_item_cont">
@@ -474,6 +473,42 @@
 							<h3>Javascript</h3>
 							<p>Carousel, Dropdowm menu, checkbox</p>
 							<a target="_blank" href="Carousel_Dropdowm%20menu_checkbox/index.html">Look at</a>
+						</div>
+						<div class="hidden">
+							<div class="podrt_descr">
+								<div class="modal-box-content">
+									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+									<h3>Title of work</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
+									<img src="img/portfolio-images/5.jpg" alt="Alt" />
+								</div>
+							</div>
+						</div>
+					</div>
+						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-3">
+							<img src="img/jQuery_plugins.jpg" alt="Alt" />
+						<div class="port_item_cont">
+							<h3>Javascript</h3>
+							<p>jQuery plugins</p>
+							<a target="_blank" href="jQueryPlugins/index.html">Look at</a>
+						</div>
+						<div class="hidden">
+							<div class="podrt_descr">
+								<div class="modal-box-content">
+									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+									<h3>Title of work</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
+									<img src="img/portfolio-images/5.jpg" alt="Alt" />
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-3">
+							<img src="img/jQuery.jpg" alt="Alt" />
+						<div class="port_item_cont">
+							<h3>jQuery</h3>
+							<p>jQuery examples</p>
+							<a target="_blank" href="JS_EXAMPLES/jQuery.html">Look at</a>
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
