--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
 						<div class="port_item_cont">
 							<h3>jQuery</h3>
 							<p>jQuery examples</p>
-							<a target="_blank" href="JS_EXAMPLES/jQuery.html">Look at</a>
+							<a target="_blank" href="Jsexamples/jQuery.html">Look at</a>
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
