--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 						<div class="resume_icon"><i class="icon-basic-case"></i></div>
               <div class="resume_item first">
                   <div class="year yearfirst">2015-2017</div>
-                  <div class="resume_description"><strong>FRONT-END DEVELOPMENT<br/>MY SKILLS:</strong> <P>HTML5 CSS<br/>Javascript<br/>jQuery<br/>Responsive Web Design<br/>Bootstrap<br/>Github<br/>Grunt, Gulp</P></div>
+                  <div class="resume_description"><strong>FRONT-END DEVELOPMENT<br/>
+                 MY SKILLS:</strong> <P>HTML5 CSS3<br/>Javascript<br/>jQuery<br/>Responsive Web Design<br/>Ajax<br/>Bootstrap<br/>Github<br/>Gulp, Grunt</P></div>
               </div>
               <div class="resume_item">
                   <div class="year">2008-2015</div>
@@ -107,18 +108,30 @@
 							</div>
 						</div>
 						<div class="col-md-6 col-sm-6 right">
-							<h3>Study</h3>
-							<div class="resume_icon"><i class="icon-basic-book-pen"></i></div>
-						<div class="resume_item">
-							<div class="year">2015-2017</div>
-							<div class="resume_description"><strong>PASSED COURSES:<br/>GoFrontend : Online 7</strong><br/><p>Company GoIT (in 2017)</p><strong>HTML & CSS,<br/>JAVASCRIPT (BASIC COURSE),<br/>JAVASCRIPT ADVANCED (ADVANCED COURSE)<br/>Freelance </strong><br/><p>Company ITEA ( IT Education Academy )( in 2015-2016 )</p></div>
-						</div>
+							<h3>Study</h3>							<div class="resume_icon"><i class="icon-basic-book-pen"></i></div>
+							<div class="resume_item">
+								<div class="year">2015-2017</div>
+								<div class="resume_description">
+									<strong>PASSED COURSES:
+									<div class="resume_ser mfp-gallery">GoFrontend: Online 7,<a href="img/GOIT.jpg" class="mfp-gallery">
+										  certificate <img src="img/GOIT2.jpg" alt="certificate">
+										<img src="img/apendix_2.jpg" alt="certificate">
+										<img src="img/apendix2_2.jpg" alt="certificate">
+										</a>
+										<p>Company GoIT (in 2017)</p>
+										<a href="img/apendix.jpg"></a>
+										<a href="img/apendix2.jpg"></a>
+									</div>
+									</strong>
+									<br/>
+									<strong>HTML & CSS, <a href="img/GOIT.jpg" class="mfp-gallery"> <!--  certificate <img src="img/GOIT2.jpg" alt="certificate"> --></a><br/>JAVASCRIPT (BASIC COURSE), <a href="img/freelance1.png" class="mfp-gallery">  <!-- certificate <img src="img/freelance3.png" alt="certificate"> --></a><br/>JAVASCRIPT ADVANCED (ADVANCED COURSE),<a href="img/freelance1.png" class=" mfp-gallery"> certificate <img src="img/freelance3.png" alt="certificate"></a><br/>Freelance, <a href="img/jsadvanced.png" class=" mfp-gallery">  certificate <img src="img/jsadvanced22.png" alt="certificate"></a> </strong><br/><p>Company ITEA ( IT Education Academy )( in 2015-2016 )</p></div>
+								</div>
 						<div class="resume_item">
 							<div class="year">2008-2011</div>
 							<div class="resume_description"><strong>Specialist in Law</strong><p>National University of State Tax Service of Ukraine</p> <p></p></div>
 						</div>
 						<div class="resume_item">
-							<div class="year">2002-207</div>
+							<div class="year">2002-2007</div>
 							<div class="resume_description"><strong>SPECIALIST ON TRANSPORT</strong><p>Kyiv University of Economics and Technology of Transport</p></div>
 
 					</div>
@@ -140,8 +153,8 @@
 			<div class="row">
 				<div class="col-md-4 col-md-push-4 animation_1">
 					<h3>Photo</h3>
-					<div class="person">
-						<a href="img/photo.jpg" class="popup"><img src="img/photo.jpg" alt="Alt" /></a>
+					<div class="person  mfp-gallery">
+						<a href="img/photo.jpg"><img src="img/photo.jpg" alt="Alt" /></a>
 					</div>
 				</div>
 				<div class="col-md-4 col-md-pull-4 animation_2">
@@ -200,7 +213,7 @@
 						<div class="port_item_cont">
 							<h3>S&Mitler</h3>
 							<p>Responsive Landing page for beauty saloon</p>
-                            <a target="_blank" href="S_MitlerModify2/app/index.html">Look at</a>
+              <a target="_blank" href="S_MitlerModify2/app/index.html">Look at</a>
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
@@ -218,7 +231,7 @@
 						<div class="port_item_cont">
 							<h3>URLAUBSGLÜCK</h3>
 							<p>Responsive Landing page for dating</p>
-                            <a target="_blank" href="https://maxjulya.github.io/Exam/">Look at</a>
+              <a target="_blank" href="https://maxjulya.github.io/Exam/">Look at</a>
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
@@ -236,16 +249,16 @@
 						<div class="port_item_cont">
 							<h3>Yurdis</h3>
 							<p>Site for a law firm</p>
-                            <a target="_blank" href="Yurdis/index.html">Look at</a>
+              <a target="_blank" href="Yurdis/index.html">Look at</a>
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
-								<div class="modal-box-content">
+<!-- 								<div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Title of work</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/4.jpg" alt="Alt" />
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -254,16 +267,16 @@
 						<div class="port_item_cont">
 							<h3>OVK</h3>
 							<p>Responsive Landing page for installation services</p>
-                            <a target="_blank" href="https://maxjulya.github.io/OVK/">Look at</a>
+              <a target="_blank" href="https://maxjulya.github.io/OVK/">Look at</a>
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
-								<div class="modal-box-content">
+								<!-- <div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Title of work</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/2.jpg" alt="Alt" />
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>		
@@ -277,12 +290,12 @@
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
-								<div class="modal-box-content">
+								<!-- <div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Title of work</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/1.jpg" alt="Alt" />
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -295,12 +308,12 @@
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
-								<div class="modal-box-content">
+								<!-- <div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Title of work</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/3.jpg" alt="Alt" />
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -313,12 +326,12 @@
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
-								<div class="modal-box-content">
+								<!-- <div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Title of work</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/5.jpg" alt="Alt" />
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -331,12 +344,12 @@
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
-								<div class="modal-box-content">
+								<!-- <div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Title of work</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/6.jpg" alt="Alt" />
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -349,12 +362,12 @@
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
-								<div class="modal-box-content">
+								<!-- <div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Title of work</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="Avtoservis/template_bootstrap/img/avtoservis.jpg" alt="Alt" />
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -368,12 +381,12 @@
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
-								<div class="modal-box-content">
+								<!-- <div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Title of work</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/1.jpg" alt="Alt" />
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -386,12 +399,12 @@
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
-								<div class="modal-box-content">
+			<!-- 					<div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Title of work</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/1.jpg" alt="Alt" />
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -404,12 +417,12 @@
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
-								<div class="modal-box-content">
+								<!-- <div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Title of work</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/5.jpg" alt="Alt" />
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -422,12 +435,12 @@
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
-								<div class="modal-box-content">
+								<!-- <div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Title of work</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/5.jpg" alt="Alt" />
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -440,12 +453,12 @@
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
-								<div class="modal-box-content">
+								<!-- <div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Title of work</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/5.jpg" alt="Alt" />
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>	
@@ -458,12 +471,12 @@
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
-								<div class="modal-box-content">
+								<!-- <div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Title of work</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/5.jpg" alt="Alt" />
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -476,12 +489,12 @@
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
-								<div class="modal-box-content">
+								<!-- <div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Title of work</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/5.jpg" alt="Alt" />
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -494,12 +507,12 @@
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
-								<div class="modal-box-content">
+								<!-- <div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Title of work</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/5.jpg" alt="Alt" />
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -512,12 +525,12 @@
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
-								<div class="modal-box-content">
+							<!-- 	<div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Title of work</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/5.jpg" alt="Alt" />
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -585,11 +598,11 @@
 			<div class="col-md-12">
 				&copy; 2017 Maksym Zhyvotovskyi
 				<div class="social_wrap">
-					<ul>
+					<ul>						
+						<li><a href="https://github.com/maxjulya" target="_blank"><i class="fa fa-github"></i></a></li>
+						<li><a href="https://www.facebook.com/profile.php?id=100005615805334&fref=ts" target="_blank"><i class="fa fa-facebook"></i></a></li>
 						<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
 						<li><a href="#" target="_blank"><i class="fa fa-vk"></i></a></li>
-						<li><a href="https://www.facebook.com/profile.php?id=100005615805334&fref=ts" target="_blank"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="https://github.com/maxjulya" target="_blank"><i class="fa fa-github"></i></a></li>
 						<li><a href="#" target="_blank"><i class="fa fa-odnoklassniki"></i></a></li>
 					</ul>
 				</div>
