--- a/Avtoservis/template_bootstrap/index.html
+++ b/Avtoservis/template_bootstrap/index.html
@@ -8,7 +8,7 @@
 <head>
 	<meta charset="utf-8" />
 
-	<title>Заголовок</title>
+	<title>Autoholl</title>
 	<meta content="" name="description" />
 	<meta content="" property="og:image" />
 	<meta content="" property="og:description" />
@@ -21,7 +21,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<link rel="shortcut icon" href="favicon.png" />
+	<!-- <link rel="shortcut icon" href="favicon.png" /> -->
 
 	<link rel="stylesheet" href="libs/bootstrap/bootstrap-grid-3.3.1.min.css" />
 	<link rel="stylesheet" href="libs/font-awesome-4.2.0/css/font-awesome.min.css" />
@@ -419,37 +419,37 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="hi_item">
-							<a href="img/_ex3.jpg" class="fancybox" data-fancybox-group="group"><img src="img/_ex3.jpg" alt="alt"/></a>
+							<a href="img/ex3.jpg" class="fancybox" data-fancybox-group="group"><img src="img/ex3.jpg" alt="alt"/></a>
 							<p>Нам под силу виртуозное выполнение такого сложного автотехнического процесса, как антикоррозийная обработка автомобиля! Многие владельцы современных машин считают, что коррозия им не страшна, но это не так.   Мы используем самые качественные материалы и работы осуществляются теми, кто являются профессионалами высочайшего класса</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="hi_item">
-							<a href="img/_ex4.jpg" class="fancybox" data-fancybox-group="group"><img src="img/_ex4.jpg" alt="alt"/></a>
+							<a href="img/ex4.jpg" class="fancybox" data-fancybox-group="group"><img src="img/ex4.jpg" alt="alt"/></a>
 							<p>Автомобиль современного делового человека должен иметь презентабельный вид. Многие наши клиенты, бросив критический взгляд на свою машину, понимают, что ей необходима абразивная полировка кузова. Она применяется в тех случаях, когда на поверхности автомобиля изобилуют дефекты.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="hi_item">
-							<a href="img/_ex5.jpg" class="fancybox" data-fancybox-group="group"><img src="img/_ex52.jpg" alt="alt"/></a>
+							<a href="img/ex52.jpg" class="fancybox" data-fancybox-group="group"><img src="img/ex52.jpg" alt="alt"/></a>
 							<p>Одной из самых востребованных нашими клиентами услуг является локальный ремонт бамперов прочего пластика. В наши дни, как и ранее, бамперы защищают автомобили в ходе столкновения. Бампера современных автомобилей изготовлены из пластика, стоят дорого и являются достаточно ломкими.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="hi_item">
-							<a href="img/_ex6.jpg" class="fancybox" data-fancybox-group="group"><img src="img/_ex62.jpg" alt="alt"/></a>
+							<a href="img/ex6.jpg" class="fancybox" data-fancybox-group="group"><img src="img/ex62.jpg" alt="alt"/></a>
 							<p>Наши специалисты способны привести в идеальное состояние приобретенный подержанный автомобиль либо машину, которая недавно побывала в «автопеределке».</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="hi_item">
-							<a href="img/_ex1.jpg" class="fancybox" data-fancybox-group="group"><img src="img/_ex1.jpg" alt="alt"/></a>
+							<a href="img/ex1.jpg" class="fancybox" data-fancybox-group="group"><img src="img/ex1.jpg" alt="alt"/></a>
 							<p>Для владельцев автомашин марки Mercedes, BMW, Mini, Ford, Volkswagen, Mazda, Hyundai, нуждающихся в том, чтобы осуществить кузовной ремонт на самом высоком уровне либо покраску автомобиля, гостеприимно распахивает свои двери сервис «Автохолл».</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="hi_item">
-							<a href="img/_ex7.jpg" class="fancybox" data-fancybox-group="group"><img src="img/_ex7.jpg" alt="alt"/></a>
+							<a href="img/ex7.jpg" class="fancybox" data-fancybox-group="group"><img src="img/ex7.jpg" alt="alt"/></a>
 							<p>Порой, даже с очень внимательным и аккуратным водителем, имеющим большой стаж, случается серьезная авария, которая приводит автомобиль к серьезной деформации кузова. В этом случае нами могут быть выполнены стапельные работы.</p>
 						</div>
 					</div>
@@ -505,7 +505,7 @@
 					</nav>
 				</div>
 				<div class="col-md-2">
-					<img src="img/_ex2.jpg" alt="alt">
+					<img src="img/ex2.jpg" alt="alt">
 				</div>
 			</div>
 		</div>
