--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 						<div class="port_item_cont">
 							<h3>S&Mitler</h3>
 							<p>Responsive Landing page for beauty saloon</p>
-              <a target="_blank" href="S_MitlerModify2/app/index.html">Look at</a>
+              <a target="_blank" href="http://y96471em.beget.tech">Look at</a>
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
