sertificats html js

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 									</div>
 									</strong>
 									<br/>
-									<strong>HTML & CSS, <a href="img/GOIT.jpg" class="mfp-gallery_2"> <!--  certificate <img src="img/GOIT2.jpg" alt="certificate"> --></a><br/>JAVASCRIPT (BASIC COURSE), <a href="img/freelance1.png" class="mfp-gallery_2">  <!-- certificate <img src="img/freelance3.png" alt="certificate"> --></a><br/>JAVASCRIPT ADVANCED (ADVANCED COURSE),<a href="img/freelance1.png" class=" mfp-gallery_2"> certificate <img src="img/freelance3.png" alt="certificate"></a><br/>Freelance, <a href="img/jsadvanced.png" class=" mfp-gallery_2">  certificate <img src="img/jsadvanced22.png" alt="certificate"></a> </strong><br/><p>Company ITEA ( IT Education Academy ) (in 2015-2016)</p></div>
+									<strong>HTML & CSS, <a href="img/html&css.jpg" class="mfp-gallery_2">  certificate <img src="img/html&css2.jpg" alt="certificate"></a><br/>JAVASCRIPT (BASIC COURSE), <a href="img/jsbase.jpg" class="mfp-gallery_2">  certificate <img src="img/jsbase2.jpg" alt="certificate"></a><br/>JAVASCRIPT ADVANCED (ADVANCED COURSE),<a href="img/freelance1.png" class=" mfp-gallery_2"> certificate <img src="img/freelance3.png" alt="certificate"></a><br/>Freelance, <a href="img/jsadvanced.png" class=" mfp-gallery_2">  certificate <img src="img/jsadvanced22.png" alt="certificate"></a> </strong><br/><p>Company ITEA ( IT Education Academy ) (in 2015-2016)</p></div>
 								</div>
 						<div class="resume_item">
 							<div class="year">2008-2011</div>
